# crpg-game

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.cpp  vcpkg.json
Source/: pch.h
Source/Assets/Shaders/: vertex.hlsl
Source/Engine/: Engine.cpp  Engine.hpp
Source/Engine/Camera/: Camera.cpp  Camera.hpp
Source/Engine/Subsystems/: Logger.hpp  Window.cpp  Window.hpp
Source/Engine/Subsystems/Events/: Event.hpp
Source/Engine/Subsystems/Graphics/DX12/: Allocator.cpp  Allocator.hpp  CommandQueue.cpp  CommandQueue.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Mesh.cpp  Mesh.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SwapChain.cpp  SwapChain.hpp  UploadHeap.cpp  UploadHeap.hpp
Source/Game/: Game.cpp  Game.hpp  IGame.hpp
Source/Utils/: IniFileParser.cpp  IniFileParser.hpp  Random.hpp  Utils.cpp  Utils.hpp
include/: Logger.hpp
